--- a/.doc_gen/validation.yaml
+++ b/.doc_gen/validation.yaml
@@ -203,6 +203,7 @@ allow_list:
   - "CognitoEventUserPoolsMigrateUserResponse"
   - "v2/service/cognitoidentityprovider/types"
   - "abortIncompleteMultipartUploadsOlderThan"
+  - "com/pinterest/ktlint/releases/download/1"
 sample_files:
   - "README.md"
   - "chat_sfn_state_machine.json"
