--- a/javascriptv3/example_code/bedrock-runtime/package.json
+++ b/javascriptv3/example_code/bedrock-runtime/package.json
@@ -11,7 +11,6 @@
     "@aws-sdk/client-bedrock-runtime": "^3.533.0"
   },
   "devDependencies": {
-    "vitest": "^1.6.0",
-    "zod": "^3.22.4"
+    "vitest": "^1.6.0"
   }
 }
