--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -2534,6 +2534,13 @@ s3_Scenario_PresignedUrl:
             - description: Upload using libcurl.
               snippet_tags:
                 - cpp.example_code.s3.presigned.PutObjectUpload
+    PHP:
+      versions:
+        - sdk_version: 3
+          github: php/example_code/s3
+          excerpts:
+            - snippet_tags:
+                - s3.php.presigned_url.complete
   services:
     s3: {}
 s3_Scenario_ObjectVersioningUsage:
